docs: fix navbar z-index issue

--- a/docs/styles/Navbar.module.css
+++ b/docs/styles/Navbar.module.css
@@ -9,6 +9,7 @@
     top: 0;
     left: 0;
     width: 100vw;
+    z-index: 10000;
 }
 
 .logoWrapper img {
